--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,17 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      观察钱包
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <div class="content-container">
+    <ion-item>
+      <ion-label floating>Transaction/Address</ion-label>
+      <ion-input type="text" [(ngModel)]="hash"></ion-input>
+    </ion-item>
+    <button ion-button class="btn-submit" (click)="submit()">查询</button>
+  </div>
 </ion-content>
