--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -29,6 +29,9 @@
         <button ion-item>P2B 10000</button>
       </ion-list>
       <ion-list>
+        <button ion-item (click)="goToQueryPage()">查询</button>
+      </ion-list>
+      <ion-list>
         <button ion-item (click)="goToSettings()">设置</button>
       </ion-list>
     </div>
