--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -33,6 +33,9 @@
         <button ion-item (click)="goToQueryPage()">查询</button>
       </ion-list>
       <ion-list>
+        <button ion-item (click)="createNewWallet()">创建钱包</button>
+      </ion-list>
+      <ion-list>
         <button ion-item (click)="importKeyObject()">导入</button>
       </ion-list>
       <ion-list>
