--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,10 +3,10 @@
     <ion-row class="header">
       <ion-col col-12 class="header-content">
         <ion-col col-12 class="title">
-          <div>我的钱包</div>
+          <div>{{walletName}}</div>
         </ion-col>
         <ion-col col-12 class="detail">
-          <div>0x{{address | slice:0:20}}</div>
+          <div>{{address | slice:0:20}}</div>
           <div class="amount-of-coin">{{balance | async}} ETH</div>
           <div class="amount-of-usd">10000 USD</div>
           <div class="amount-of-wallet">钱包总额</div>
