feat(mnenomic): add mnenomic page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -36,6 +36,9 @@
         <button ion-item (click)="createNewWallet()">创建钱包</button>
       </ion-list>
       <ion-list>
+        <button ion-item (click)="goToMenoPage()">助记词</button>
+      </ion-list>
+      <ion-list>
         <button ion-item (click)="goToSettings()">设置</button>
       </ion-list>
     </div>
