feat(mnenomic): add entry from create page

--- a/src/pages/mnenomic/mnenomic.html
+++ b/src/pages/mnenomic/mnenomic.html
@@ -21,4 +21,7 @@
       <p class="mnenomic">{{mnenomic}}</p>
     </ion-card-content>
   </ion-card>
+  <div padding>
+      <button ion-button color="primary" block (click)="rememberMnenomic()">下一步</button>
+    </div>
 </ion-content>
