refactor(create): angular form validation

--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -12,26 +12,30 @@
     <li> 密码用于保护私钥和交易授权，强度非常重要 </li>
     <li> 本钱包不存储密码，也无法帮您找回，请务必注意 </li>
   </ol>
- <ion-list>
+  <form [formGroup]="wallet" (ngSubmit)="createWallet()">
     <ion-item>
-      <ion-input placeholder="钱包名称" type="text" [(ngModel)]="walletName"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-input placeholder="密码" type="password" [(ngModel)]="password"></ion-input>
+      <ion-input placeholder="钱包名称" type="text" formControlName="walletName"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input placeholder="密码重复" type="password" [(ngModel)]="repeatPassword"></ion-input>
+      <ion-input placeholder="密码" type="password" formControlName="password"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input placeholder="密码提示信息（可不填）" type="text" [(ngModel)]="hint"></ion-input>
+      <ion-input placeholder="密码重复" type="password" formControlName="confirmPass"></ion-input>
     </ion-item>
-    <ion-item class="condition">
-        <ion-label>我已经仔细阅读并同意 <a>服务及隐私条款</a></ion-label>
-        <ion-checkbox color="blue" checked="false" [(ngModel)]="condition"></ion-checkbox>
+    <ion-item>
+      <ion-input placeholder="密码提示信息（可不填）" type="text" formControlName="hint"></ion-input>
     </ion-item>
-  </ion-list>
+    <ion-item>
+      <ion-checkbox color="blue" checked="false" formControlName="condition"></ion-checkbox>
+      <ion-label>
+        <p>我已经仔细阅读并同意 <a>服务及隐私条款</a></p>
+      </ion-label>
+    </ion-item>
+    <div padding>
+      <button ion-button color="primary" block type="sumbmit" [disabled]="!wallet.valid">创建钱包</button>
+    </div>
+  </form>
   <div padding>
-    <button ion-button color="primary" block (click)="createWallet()">创建钱包</button>
     <button ion-button color="secondary" block (click)="importWallet()">导入钱包</button>
   </div>
 </ion-content>
