initial tx page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,7 @@
           <button ion-button color="light" class="button">转入</button>
         </ion-col>
         <ion-col col-6 class="button-container right">
-          <button ion-button color="light" class="button">转出</button>
+          <button ion-button color="light" class="button" (click)="goToTxPage()">转出</button>
         </ion-col>
       </ion-col>
     </ion-row>
